--- a/FrontEndProc/FrontEndProc.csproj
+++ b/FrontEndProc/FrontEndProc.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Source\FrontEnd.cs" />
     <Compile Include="Source\MyCmdLineExec.cs" />
     <Compile Include="Source\Program.cs" />
   </ItemGroup>
