--- a/FrontEndProc/FrontEndProc.csproj
+++ b/FrontEndProc/FrontEndProc.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Source\BackEnd.cs" />
     <Compile Include="Source\FrontEnd.cs" />
     <Compile Include="Source\MyCmdLineExec.cs" />
     <Compile Include="Source\Program.cs" />
