--- a/FrontEndProc/FrontEndProc.csproj
+++ b/FrontEndProc/FrontEndProc.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\BackEnd.cs" />
+    <Compile Include="Source\BackEndHelper.cs" />
     <Compile Include="Source\FrontEnd.cs" />
     <Compile Include="Source\MyCmdLineExec.cs" />
     <Compile Include="Source\Program.cs" />
